# gerry-dislocation-ensemble

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: runs.yaml
notebooks/: 00_phase1_validation.ipynb
scripts/: fetch_atlases.py
src/gerry/io/: __init__.py  atlas.py  graph.py  validate.py
src/gerry/metrics/: __init__.py
tests/: test_atlas_io.py  test_graph_io.py  test_validate_io.py
